Fix overflow of long domain names on topic listing

--- a/tildes/scss/modules/_topic.scss
+++ b/tildes/scss/modules/_topic.scss
@@ -212,6 +212,11 @@
   white-space: nowrap;
 }
 
+.topic-info-source {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .topic-full {
   .topic-voting {
     float: right;
